syntax = "proto3";

package activity;

service ActivityService {
  rpc GetUserActivity (GetUserActivityRequest) returns ( GetUserActivityResponse ) {}
}

message GetUserActivityRequest {
  string userId = 1;
}

message GetUserActivityResponse {
  string userId = 1;
  string eventType = 2;
  string module = 3;
  string createdAt = 4;
}
